<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/trackLengthHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/track_length"
            android:textSize="40sp"
            />

        <TextView
            android:id="@+id/trackLength"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="40sp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/trackLengthReduce"
            style="@style/buttonConfigTrackLength"
            android:text="@string/param_reduce"
            app:backgroundTint="@color/colorBackgroundSecondary"
            app:elevation="0dp"
            app:iconTint="#FFFFFF"
            app:rippleColor="@color/colorButtonRipple"
            app:strokeColor="@color/colorButtonStroke"
            app:strokeWidth="1dp"
            />

        <Button
            android:id="@+id/trackLengthIncrease"
            style="@style/buttonConfigTrackLength"
            android:text="@string/param_increase"
            app:backgroundTint="@color/colorBackgroundSecondary"
            app:elevation="0dp"
            app:iconTint="#FFFFFF"
            app:rippleColor="@color/colorButtonRipple"
            app:strokeColor="@color/colorButtonStroke"
            app:strokeWidth="1dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <Button
            android:id="@+id/startRace"
            style="@style/buttonStartRace"
            android:text="@string/button_start"
            app:backgroundTint="@color/colorBackgroundSecondary"
            app:elevation="0dp"
            app:iconTint="#FFFFFF"
            app:rippleColor="@color/colorButtonRipple"
            app:strokeColor="@color/colorButtonStroke"
            app:strokeWidth="1dp"
            />

    </LinearLayout>

</LinearLayout>